--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^5.0.7",
-    "react-scripts-ts": "2.17.0",
-    "redux": "^4.0.0",
+    "react-scripts-ts": "3.1.0",
+    "redux": "4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0"
